--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_API_URL=http://localhost:4000
-REACT_APP_FRONTEND_URL=http://151.106.120.94:4000
+REACT_APP_API_URL=http://localhost:4000
+# REACT_APP_FRONTEND_URL=http://151.106.120.94:4000
