--- a/.github/workflows/pos_react_frontend.yml
+++ b/.github/workflows/pos_react_frontend.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Deploy to Server
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-            cd /pos_react_front_office
-            git pull origin main
-            docker-compose build pos_frontend
-            docker-compose up -d --no-deps pos_frontend
+            cd /pos_react_front_office || exit 1
+            git pull origin main || exit 1
+            docker-compose build frontend
+            docker-compose up -d --no-deps frontend
           EOF
