--- a/.github/workflows/pos_react_frontend.yml
+++ b/.github/workflows/pos_react_frontend.yml
@@ -18,11 +18,20 @@ jobs:
           echo "${{ secrets.SERVER_SSH_KEY }}" > private_key
           chmod 600 private_key
 
-      - name: Deploy to Server
+      - name: Deploy Frontend Only
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-            cd pos_react_front_office
+            cd /home/${{ secrets.SERVER_USER }}/pos_react_front_office
+
+            # Pull latest frontend code
             git pull origin main
+            
+            # Build only frontend without affecting backend or database
             docker-compose build frontend
+            
+            # Restart only the frontend container
             docker-compose up -d --no-deps frontend
+
+            # Remove unused Docker images to save space
+            docker image prune -f
           EOF
