--- a/.github/workflows/pos_react_frontend.yml
+++ b/.github/workflows/pos_react_frontend.yml
@@ -37,19 +37,16 @@ jobs:
       - name: Copy files to VPS
         run: |
           echo "Checking for the correct directory..."
-          if [ -d "$GITHUB_WORKSPACE/pos_react_front_office" ]; then
-            echo "Found pos_react_front_office at $GITHUB_WORKSPACE/pos_react_front_office"
-            scp -r $GITHUB_WORKSPACE/pos_react_front_office root@${{ secrets.SERVER_IP }}:/var/www/pos_react_front_office
-          else
-            echo "Error: pos_react_front_office directory not found!"
-            ls -la $GITHUB_WORKSPACE  # Debug: List files
-            exit 1
-          fi
+          ls -la $GITHUB_WORKSPACE  # Debugging step
 
-      # Step 5: SSH into VPS and restart frontend
-      - name: Deploy to VPS
-        run: |
-          ssh -o StrictHostKeyChecking=no root@${{ secrets.SERVER_IP }} << 'EOF'
-            cd /var/www/pos_react_front_office
-            docker-compose up -d --build frontend  # Restart frontend container only
-          EOF
+          echo "Copying files to VPS..."
+          scp -r $GITHUB_WORKSPACE/* root@${{ secrets.SERVER_IP }}:/var/www/pos_react_front_office
+
+
+            # Step 5: SSH into VPS and restart frontend
+            - name: Deploy to VPS
+              run: |
+                ssh -o StrictHostKeyChecking=no root@${{ secrets.SERVER_IP }} << 'EOF'
+                  cd /var/www/pos_react_front_office
+                  docker-compose up -d --build frontend  # Restart frontend container only
+                EOF
