--- a/.github/workflows/pos_react_frontend.yml
+++ b/.github/workflows/pos_react_frontend.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SERVER_SSH_KEY }}
 
-      # Step 4: Copy frontend files to VPS (Fix SSH host key verification)
+      # Step 4: Copy frontend files to VPS (Fix SSH host key verification)s
       - name: Copy files to VPS
         run: |
           echo "Copying files to VPS..."
