--- a/.github/workflows/pos_react_frontend.yml
+++ b/.github/workflows/pos_react_frontend.yml
@@ -53,5 +53,6 @@ jobs:
           ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null root@${{ secrets.SERVER_IP }} << 'EOF'
             cd /var/www/pos_react_front_office
             docker-compose build --no-cache frontend  # Rebuild frontend without cache
+            docker-compose logs frontend  # Output logs to debug any issues during build
             docker container restart pos_frontend  # Restart only the frontend container
           EOF
