--- a/.github/workflows/pos_react_frontend.yml
+++ b/.github/workflows/pos_react_frontend.yml
@@ -1,45 +1,57 @@
-name: Deploy React Frontend
+name: Deploy Frontend to VPS
 
 on:
   push:
     branches:
-      - main
-    paths:
-      - "pos_react_front_office/**"
+      - main  # Deploy when code is pushed to 'main'
+  pull_request:
+    branches:
+      - main  # Deploy when a PR is merged into 'main'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Ensure the full repo is cloned
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Install Docker Compose v2
+      # Step 2: Debug - Check files in workspace
+      - name: Debug - List files in workspace
         run: |
-          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose version
+          echo "Listing files in GitHub Actions workspace..."
+          ls -la $GITHUB_WORKSPACE
 
-      - name: Copy files to VPS
-        uses: appleboy/scp-action@v0.1.4
+      # Step 3: Set up SSH for deployment
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
         with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          source: "."
-          target: "/var/www/pos_react_front_office"
+          ssh-private-key: ${{ secrets.SERVER_SSH_KEY }}
 
-      - name: Deploy React Frontend
-        uses: appleboy/ssh-action@v0.1.7
-        with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
+      # Step 4: Clone frontend files from GitHub (or pull latest changes)
+      - name: Clone frontend files from GitHub
+        run: |
+          echo "Cloning or pulling frontend repository..."
+          ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null root@${{ secrets.SERVER_IP }} << 'EOF'
+            cd /var/www
+            if [ -d "pos_react_front_office" ]; then
+              cd pos_react_front_office
+              git fetch --all  # Fetch all branches
+              git reset --hard origin/main  # Discard local changes and force sync with remote
+            else
+              git clone https://github.com/titya18/pos_react_front_office.git  # Clone if the directory doesn't exist
+            fi
+          EOF
+
+      # Step 5: Rebuild and deploy frontend only
+      - name: Deploy frontend to VPS
+        run: |
+          echo "Rebuilding and restarting frontend on VPS..."
+          ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null root@${{ secrets.SERVER_IP }} << 'EOF'
             cd /var/www/pos_react_front_office
-            docker-compose -f docker-compose.frontend.yml down
-            docker-compose -f docker-compose.frontend.yml up -d --build
+            docker-compose -f /var/www/docker-compose.frontend.yml build --no-cache frontend  # Rebuild frontend without cache
+            docker-compose -f /var/www/docker-compose.frontend.yml up -d --no-deps frontend  # Restart only frontend container
+          EOF
