--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "antd": "^5.24.4",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.19",
+    "file-saver": "^2.0.5",
     "i18next": "^25.2.0",
     "i18next-browser-languagedetector": "^8.1.0",
     "i18next-http-backend": "^3.0.2",
@@ -29,6 +30,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.555.0",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
