--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/x-date-pickers": "^7.28.0",
-    "@tanstack/react-query": "^5.69.0",
+    "@tanstack/react-query": "^5.90.14",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -20,6 +20,7 @@
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "antd": "^5.24.4",
+    "axios": "^1.13.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.19",
     "file-saver": "^2.0.5",
@@ -39,6 +40,7 @@
     "react-router-dom": "^6.30.0",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.6.0",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.17.2",
     "timezone": "^1.0.23",
