--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:4000
-# VITE_API_URL=http://151.106.120.94:4000
+# VITE_API_URL=http://localhost:4000
+VITE_API_URL=http://202.93.8.4:4000
